fix scrollbar issue for safari browser(mobile only)

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,10 @@ body {
   font-family: "Outfit", sans-serif;
 }
 html,
-body {
+body,
+#root {
+  margin: 0;
+  padding: 0;
+  max-width: 100vw;
   overflow-x: hidden;
 }
